Added Facebook authentication

--- a/MiddleWareDemo/Views/Secret/Index.cshtml
+++ b/MiddleWareDemo/Views/Secret/Index.cshtml
@@ -10,6 +10,12 @@
 <body>
 <div>
     <h1>This is secret!</h1>
+    @foreach (var claim in ((System.Security.Claims.ClaimsPrincipal) User).Claims)
+    {
+        <div>
+            @claim.Type : @claim.Value
+        </div>
+    }
 </div>
 </body>
 </html>
